k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yaluride-production
  labels:
    name: yaluride-production
    environment: production
